deployment/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: test-app
  name: test-app
spec:
  replicas: 5
  selector:
    matchLabels:
      app: test-app
  strategy: {}
  template:
    metadata:
      labels:
        app: test-app
    spec:
      containers:
      - image: keppel.eu-de-1.cloud.sap/ccloud/zero-downtime-test-webserver:0.1.4
        name: test-app
        ports:
          - containerPort: 6969
