deployment/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: test-app
  name: test-app
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 6969
  selector:
    app: test-app
  type: ClusterIP
